--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 build: off
 
+artifacts:
+- path: bin/kids-ide.exe
+  name: kids-ide
+
 before_test:
 # http://help.appveyor.com/discussions/problems/6312-curl-command-not-found
 - set PATH=C:\Program Files\Git\mingw64\bin;%PATH%
@@ -16,22 +20,25 @@ environment:
     # See https://github.com/haskell/cabal/issues/5386
     TMP: "c:\\tmp"
 
-  matrix:
-  - ARGS: ""
-  #- ARGS: "--resolver lts-2"
-  #- ARGS: "--resolver lts-3"
-  #- ARGS: "--resolver lts-6"
-  #- ARGS: "--resolver lts-7"
-  - ARGS: "--resolver lts-9"
-  - ARGS: "--resolver lts-11"
-  - ARGS: "--resolver lts-12"
-  #- ARGS: "--resolver nightly"
-
 test_script:
 
 # Install toolchain, but do it silently due to lots of output
-- stack %ARGS% setup > nul
+- stack setup > nul
 
+- mkdir bin
 # The ugly echo "" hack is to avoid complaints about 0 being an invalid file
 # descriptor
-- echo "" | stack %ARGS% --no-terminal test
+- echo "" | stack install --no-terminal --test --local-bin-path bin
+
+deploy:
+  on:
+    branch: master
+  provider: S3
+  access_key_id:
+    secure: a8hgTy6jvE/LTct0bvjHDwpvbwwVLgLrQizDwtmgKMk=
+  secret_access_key:
+    secure: 5W6G5s8gBqyWDitTR24QBI6PVNetlDI4edWH8Mm9PC8dTK+zDzR43n/QywIn8x3Z
+  bucket: www.snoyman.com
+  set_public: true
+  artifact: kids-ide
+  folder: kids-ide
